--- a/main.html
+++ b/main.html
@@ -11,6 +11,22 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+
+
+<b>What is the capital of india?</b>
+<ul type = "circle" >
+
+<li>New Delhi</li>
+<li>Mumbai</li>
+</u>
+ <blockquote cite =  https://en.wikipedia.org/wiki/New_Delhi id="kl" >
+	New Delhi is the capital of India and an administrative district of NCT Delhi.
+	</blockquote>
+
+
+
+
+	
 </body>
 
 </html>
